# backend/internal/infrastructure/database/sqlcgen/models.go
@@ -1,0 +1,28 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.31.1
+
+package sqlcgen
+
+import (
+	"time"
+)
+
+type Exhibit struct {
+	ID           string
+	ExhibitionID string
+	Title        string
+	Caption      string
+	ImageUrl     string
+	DisplayOrder int32
+	CreatedAt    time.Time
+}
+
+type Exhibition struct {
+	ID           string
+	MuseumID     string
+	Title        string
+	Description  string
+	CreatedAt    time.Time
+	DisplayOrder int32
+}
