# backend/internal/infrastructure/exhibition/sqlcgen/models.go
@@ -1,17 +1,0 @@
-// Code generated by sqlc. DO NOT EDIT.
-// versions:
-//   sqlc v1.31.1
-
-package sqlcgen
-
-import (
-	"time"
-)
-
-type Exhibition struct {
-	ID          string
-	MuseumID    string
-	Title       string
-	Description string
-	CreatedAt   time.Time
-}
